# MASSpy-ExampleProject

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  main.yml
docker/: Dockerfile  README.rst
docs/: README.rst  conf.py  index.rst  robots.txt
src/exampleproject/: module_a.py
tests/: test_example.py
