title = "MASSpy-ExampleProject TOML configuration file"

################################################################################
# Build tools configuration                                                    #
################################################################################

[build-system]
requires = [
    "setuptools >= 46.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

################################################################################
# Lint tools configuration                                                     #
################################################################################

[tool.black]
line-length = 88
python-version = [
    "py36",
    "py37"
]


[tool.isort]
profile = "black"
src_paths = [
    "src/exampleproject"
]
indent = 4
lines_after_imports = 2

################################################################################
# Testing tools configuration                                                  #
################################################################################

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers"
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]


[tool.coverage.paths]
source = [
   "src",
   "*/site-packages"
]


[tools.coverage.run]
branch = true
parallel = true
source = [
    "exampleproject",
]


[tools.coverage.report]
show_missing = true
precision = 2

################################################################################
# Testing configuration                                                        #
################################################################################

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.20
envlist =
    clean,
    lint,
    safety,
    py36-{cover,nocov},
    report
isolated_build = true
skip_missing_interpreters = true


[testenv]
description = Run tests under {basepython}.
setenv =
    PYTHONPATH={toxinidir}/tests
    PYTHONUNBUFFERED=yes
usedevelop =
    cover: true
    nocov: false
deps =
    pytest
    cover: pytest-cov
    cover: pytest-xdist
    cover: coverage[toml]
depends =
    py36-{cover}: clean
    py36-{nocov}: py36-{cover}
    report: py36-{cover}
commands =
    cover: {posargs:pytest --cov=exampleproject --cov-report=term-missing --cov-append -vv}
    nocov: {posargs:pytest -vv --ignore=src}


[testenv:clean]
description = Clean previous coverage reports.
skip_install = true
deps =
    coverage[toml]
commands =
    coverage erase


[testenv:lint]
description = Lint code via pre-commit hooks, finishing with isort --> black --> flake8
skip_install = true
passenv = *
deps =
    pre-commit
commands =
    pre-commit install
    pre-commit run --all-files


[testenv:safety]
description = Safety check installed dependencies for known security vulnerabilities.
deps =
    safety
commands =
    safety check --full-report


[testenv:report]
description = Report coverage over all test runs.
skip_install = true
deps =
    coverage[toml]
commands =
    coverage report
    coverage xml

"""
