[metadata]
name = exampleproject
version = attr: exampleproject.__version__
url = https://github.com/SBRG/MASSpy-ExampleProject/
download_url = https://pypi.org/project/masspy-exampleproject/
project_urls =
    Source = https://github.com/SBRG/MASSpy-ExampleProject/
    Documentation = https://masspy-exampleproject.readthedocs.io/
    DockerHub = https://hub.docker.com/r/sbrg/masspy-exampleproject/
    Tracker = https://github.com/SBRG/MASSpy-ExampleProject/issues/
author = sbrg-machine-user
author_email = sbrg.machine.user@gmail.com
maintainer = sbrg-machine-user
maintainer_email = sbrg.machine.user@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
license = MIT
license_file = LICENSE
description = A template repository for a MASSpy-based project.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    metabolism
	biology
	constraint-based modeling
	linear programming
	mixed-integer
	optimization
	flux-balance analysis
	reconstruction
    dynamic simulation
    kinetic modeling
    ordinary differential equations

[options]
zip_safe = True
install_requires =
    masspy
python_requires = ~=3.6
include_package_data = True
packages = find:
package_dir =
	= src

[options.packages.find]
where = src
include =
    exampleproject

[options.extras_require]
dev =
    %(lint)s
    %(tests)s
    bumpversion
docs =
    sphinx
    sphinx-autoapi
lint =
    pre-commit
tests =
    tox
all =
    %(dev)s
    %(docs)s

[flake8]
ignore = E203, E266, E501, W503, F401
max-line-length = 88
max-complexity = 18
